docs: mark M8 performance testing complete — 28/28 issues verified
Agent-Logs-Url: https://github.com/rasterwebapps/BloodBank/sessions/71345104-a983-4eed-ad73-da6a41cdc0b3

Co-authored-by: rasterwebapps <256557304+rasterwebapps@users.noreply.github.com>